# desafio_moavi

./: README.md
backend/: conftest.py  docker-compose.yaml  manage.py  pyproject.toml
backend/core/: models.py  services.py  tests.py  views.py
backend/core/example_data/: exemplo_arquivo_marcacoes.csv
backend/core/migrations/: 0001_initial.py  0002_shiftregister.py  0003_rename_shiftregister_escalarecord_and_more.py
backend/desafio_moavi/: asgi.py  settings.py  urls.py  wsgi.py
front/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: main.tsx  router.tsx
front/src/components/: nav-bar.tsx  snack-bar.tsx
front/src/hooks/: snack-context.tsx
front/src/libs/: time_svc.ts
front/src/libs/data/: escalas.ts  http.ts  index.ts
front/src/libs/data_types/: data.ts
front/src/pages/files/: uploaded-files-page.tsx
front/src/pages/grafico/: graph-helper.ts  graph-page.tsx
front/src/pages/historico/: historico-colaboradores.tsx  historico-page.tsx
front/src/pages/home/: home-page.tsx
front/src/pages/registros/: uploaded-files.tsx
